updates for midterm

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -4,6 +4,7 @@
     <title>Music Composition DSL</title>
     <script src="https://unpkg.com/blockly/blockly.min.js"></script>
     <script src="custom_blocks.js"></script>
+    <script src="AudioPlayer.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
