--- a/src/design-blocks/index.html
+++ b/src/design-blocks/index.html
@@ -14,6 +14,7 @@
             <block type="measure"></block>
             <block type="note"></block>
             <block type="song"></block>
+            <block type="repeat_measure"></block>
         </xml>
     </div>
     <div class="row button-row">
