changed name of testAudio to translator

--- a/src/prototype/index.html
+++ b/src/prototype/index.html
@@ -5,7 +5,7 @@
     <script src="https://unpkg.com/blockly/blockly.min.js"></script>
     <script src="custom_blocks.js"></script>
     <script src="AudioPlayer.js"></script>
-    <script src="testAudio.js"></script>
+    <script src="translator.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
