Trying the audio Player

--- a/src/design-blocks/index.html
+++ b/src/design-blocks/index.html
@@ -54,7 +54,7 @@
         });
 
         document.getElementById("playButton").addEventListener("click", function() {
-        playMelody(melody);
+        playMelody(translatedObj);
         });
 
         document.getElementById("translateButton").addEventListener("click", function() {
