Testing the Play button

--- a/src/design-blocks/index.html
+++ b/src/design-blocks/index.html
@@ -54,6 +54,10 @@
         });
 
         document.getElementById("playButton").addEventListener("click", function() {
+        var code = document.getElementById("codeDiv").textContent;
+        var obj = JSON.parse(code); // Parse the JSON string into a JavaScript object
+        var translatedObj = translateObject(obj); // Call the function from translator.js
+        console.log(translatedObj);
         playMelody(translatedObj);
         });
 
