updated AudioPlayer, translator, and index.html

--- a/src/design-blocks/index.html
+++ b/src/design-blocks/index.html
@@ -64,8 +64,8 @@
         document.getElementById("translateButton").addEventListener("click", function() {
         var code = document.getElementById("codeDiv").textContent;
         var obj = JSON.parse(code); // Parse the JSON string into a JavaScript object
-        var translatedObj = translateObject(obj); // Call the function from translator.js
-        console.log(translatedObj);
+        var melody = objectToMelody(obj); // Call the function from testAudio.js
+        console.log(melody);
         });
         // You can then use translatedObj as needed
         // For example, you might want to display it in the outputDiv
